# serde_versioned

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
serde_versioned/: Cargo.toml
serde_versioned/src/: lib.rs
serde_versioned_derive/: Cargo.toml
serde_versioned_derive/src/: lib.rs
tests/: test.rs
