[workspace]
members = ["serde_versioned", "serde_versioned_derive"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"

[package]
name = "serde_versioned_tests"
edition = "2024"

[dev-dependencies]
serde_versioned = { path = "serde_versioned" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
serde_yaml = "0.9"